[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Actix
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# DB
chrono = { version = "0.4.22", default-features = false, features = ["clock"]}
uuid = { version = "1", features = ["v4"] }

# Tracing
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

# Misc
config = "0.13.3"
serde = { version = "1", features = ["derive"] }
once_cell = "1.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.5"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
# For integration tests
reqwest = "0.11.16"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
